CPO-8 - Refactor to 1 delete endpoint for consistent error handling